--- a/config.yaml
+++ b/config.yaml
@@ -15,10 +15,10 @@ data_loader:
   batch_size: 32
   shuffle: true
   num_workers: 8
-name: MobileNet
+name: ResNet34
 arch:
-  _target_: torchvision.models.mobilenet_v2
-  pretrained: true
+  _target_: srcs.model.model.ResNet34
+  num_classes: 25
 loss:
   _target_: srcs.model.loss.cross_entropy
 optimizer:
@@ -38,7 +38,7 @@ scheduler_step_size: 50
 scheduler_gamma: 0.1
 status: train
 trainer:
-  epochs: 7
+  epochs: 12
   logging_step: 100
   monitor: min loss/valid
   save_topk: 7
